--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.2",
 		"redux": "^5.0.1",
+		"redux-thunk": "^3.1.0",
 		"routes": "^2.1.0",
 		"thunk": "^0.0.1",
 		"vercel": "^37.6.1"
